# mathviz

./: .claude  .gitignore  CLAUDE.md  README.md  mathviz-spec.md  project.md  pyproject.toml  tasks.md
docs/: api.md  cli.md  configuration.md  demo.md  generator_notes.yaml  generators.md  grid.md  pipeline.md  preview-ui.md  preview.md  rendering.md  representation.md
fixtures/: generate_fixtures.py  gyroid.stl  gyroid.stl.meta.json  lissajous_curve.stl  lissajous_curve.stl.meta.json  lorenz.stl  lorenz.stl.meta.json  mandelbulb.stl  mandelbulb.stl.meta.json  reference_summary.json  specs.py  torus.stl  torus.stl.meta.json  torus_knot.stl  torus_knot.stl.meta.json  ulam_spiral.ply  ulam_spiral.ply.meta.json
scripts/: build_demo.py  export_presets.py  generate_generator_docs.py  generate_thumbnails.py
src/mathviz/: __init__.py  benchmark_report.py  cli.py  cli_benchmark.py  cli_cache.py  cli_demo.py  cli_grid.py  cli_output.py  cli_preview.py  cli_render.py  cli_render_batch.py  cli_thumbnail.py  cli_utils.py  demo_builder.py
tests/: conftest.py  test_build_demo.py  test_cli.py  test_cli_demo.py  test_cli_utils.py  test_demo_presets.py  test_docs.py  test_fixtures.py
tests/test_cli/: test_benchmark.py  test_commands.py  test_render_all.py
tests/test_core/: test_config.py  test_config_models.py  test_container.py  test_engraving.py  test_exporters.py  test_generator.py  test_grid.py  test_math_object.py  test_param_validation.py  test_pipeline.py  test_representation.py  test_sampler.py  test_transformer.py  test_validator.py
tests/test_docs/: conftest.py  test_docs.py  test_docs_completeness.py  test_generate_generator_docs.py  test_generator_docs.py  test_preview_ui_docs.py
tests/test_generators/: conftest.py  test_all_generators_smoke.py  test_apollonian_3d.py  test_attractors.py  test_attractors_extended.py  test_bour_surface.py  test_burning_ship.py  test_calabi_yau.py  test_cross_cap.py  test_curves.py  test_data_driven.py  test_data_driven_demo.py  test_dini_surface.py  test_dna_helix.py  test_double_pendulum.py  test_dupin_cyclide.py  test_electron_orbital.py  test_epsilon_separation.py  (+39 more)
(+207 files in other folders)
