[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathviz"
version = "0.1.0"
description = "Pipeline for generating 3D mathematical forms for subsurface laser engraving in crystal glass"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.14.1",
    "trimesh>=4.4.9",
    "rtree>=1.3.0",
    "fast-simplification>=0.1.12",
    "scikit-image>=0.24.0",
    "pydantic>=2.9.2",
    "typer>=0.12.5",
    "rich>=13.9.4",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
